--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "serverless-http": "^3.2.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
